resolved fdo#65082 RATE function should not find roots <= -1

Limit RATE to roots > -1.0, which is what also Excel and now Gnumeric
do. If the Newton goal seek fails for the default guess value 0.1 try
other values.

This now also calculates the few remaining error cases of i#15090
attachment https://issues.apache.org/ooo/attachment.cgi?id=6528
correctly.

Change-Id: Ic62cc807626b4715035c3076f58f303b9020db5a
(cherry picked from commit 9ee7be4efb494351c4be096ffa04cdbd85cdc3d4)